--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -7,7 +7,8 @@
   background-color: $light_gray
 
   @include respond-above($media_768)
-    top: 76px
+    @include respond-above-ht($media_ht_420)
+      top: 76px
 
 #pages-inner
   position: absolute
