--- a/src/styles/_main.sass
+++ b/src/styles/_main.sass
@@ -5,7 +5,8 @@ html, body
 
 body
   color: $white
-  @include type(24px, $regular)
+  @include type
+  font-weight: $regular
 
   -webkit-font-smoothing: antialiased
   -webkit-tap-highlight-color: rgba(0,0,0,0)
