--- a/src/styles/slides/_about-process.sass
+++ b/src/styles/slides/_about-process.sass
@@ -14,8 +14,10 @@
     background-position: right bottom
     background-size: 100% auto
 
-    @media all and (max-aspect-ratio: 1)
-      display: none
+    @media all and (max-aspect-ratio: 5/4)
+      background-position: 66% bottom
+      background-size: auto 90%
+      opacity: 0.33
   
   // ---------------------------------------------
   // Title zone
@@ -26,7 +28,7 @@
 
     transform: none
 
-    @include respond-above-ht($media_ht_420)
+    @include respond-above-ht($media_ht_480)
       top: 32px
 
     @include respond-above-ht($media_ht_666)
@@ -85,9 +87,9 @@
     position: absolute
     bottom: 14px
     left: 20px
-    right: 50%
+    right: 30px
 
-    @include respond-above-ht($media_ht_420)
+    @include respond-above-ht($media_ht_480)
       bottom: 32px
 
     @include respond-above-ht($media_ht_666)
@@ -98,9 +100,11 @@
 
     @include respond-above($media_768)
       left: 60px
+      right: 60px
 
-    @include respond-above($media_1024)
+    @include respond-above($media_1180)
       left: 100px
+      right: 100px
 
     .content
       width: 100%
@@ -108,16 +112,11 @@
 
       h4
         color: $black
-        @include type-mono(20px, $regular)
-        
-        @include respond-above-ht($media_ht_420)
-          @include type-mono(24px, $regular)
+        @include type-mono
 
       p
-        @include type-mono(20px, $regular)
-
-        @include respond-above-ht($media_ht_420)
-          @include type-mono(24px, $regular)
+        margin: 0 20px 0 0
+        @include type-mono
 
         a
           position: relative
@@ -134,26 +133,32 @@
             background-color: $white
 
       ul.callouts
-        height: 40px
-        margin: 10px 0 -10px
+        margin: 10px 0 0
 
-        @include respond-above-ht($media_ht_420)
-          margin: 20px 0 -8px
+        @include respond-above($media_768)
+          height: 40px
+          margin: 10px 0 -10px
+
+          @include respond-above-ht($media_ht_480)
+            margin: 20px 0 -8px
 
         li.callout
-          float: left
           position: relative
-          height: 100%
+          height: 20px
           color: $black
           cursor: pointer
+          @include type-mono
 
-          @include type-mono(40px, $regular)
+          @include respond-above($media_768)
+            float: left
+            height: 40px
+            line-height: 40px
 
-          &:first-child
-            padding: 0 20px 0 0
+            &:first-child
+              padding: 0 20px 0 0
 
-          &:last-child
-            padding: 0 0 0 20px
+            &:last-child
+              padding: 0 0 0 20px
 
           .copy
             float: left
@@ -197,28 +202,25 @@
         margin: 10px 0 0
 
         li
-          @include type-mono(20px, $regular)
-          display: none
+          margin: 0 10px 0 0
+          @include type-mono
 
           &:first-child
             color: $black
 
-          &:nth-child(1),
-          &:nth-child(2),
-          &:nth-child(3),
-          &:nth-child(4),
-          &:nth-child(5),
-          &:nth-child(6),
-          &:nth-child(7),
-          &:nth-child(8),
-          &:nth-child(9)
+          span.full
+            display: none
+          span.chop
             display: block
 
-        @include respond-above-ht($media_ht_420)
-          margin: 20px 0 0
+          @include respond-above($media_480)
+            span.full
+              display: block
+            span.chop
+              display: none
 
-          li
-            @include type-mono(24px, $regular)
+        @include respond-above-ht($media_ht_480)
+          margin: 20px 0 0
 
         @include respond-above-ht($media_ht_560)
           li
@@ -228,13 +230,10 @@
         margin: 0 0 10px
 
         li
-          @include type-mono(20px, $regular)
+          @include type-mono
 
           &:first-child
             color: $black
 
-        @include respond-above-ht($media_ht_420)
+        @include respond-above-ht($media_ht_480)
           margin: 0 0 20px
-
-          li
-            @include type-mono(24px, $regular)
