--- a/src/styles/slides/_about.sass
+++ b/src/styles/slides/_about.sass
@@ -6,8 +6,12 @@
 
   .title-zone
     .title-holder
-      margin: 0 0 76px
+      margin: 0 0 50px
       cursor: default
+
+      @include respond-above($media_1024)
+        @include respond-above-ht($media_ht_560)
+          margin: 0 0 76px
 
   // ---------------------------------------------
   // Meta zone
@@ -19,8 +23,8 @@
       height: 14px
       padding: 0 0 0 25px
       color: $black
-
-      @include type-mono(14px, $regular)
+      line-height: 14px
+      @include type-mono
 
       &:before
         content: ''
