--- a/src/styles/slides/_appendixed-work.sass
+++ b/src/styles/slides/_appendixed-work.sass
@@ -89,7 +89,7 @@
           @include respond-above($media_768)
             left: 60px
 
-          @include respond-above($media_1024)
+          @include respond-above($media_1180)
             left: 100px
 
           @include respond-above($media_1400)
@@ -101,7 +101,7 @@
             height: 14px
             cursor: pointer
 
-            @include respond-above-ht($media_ht_420)
+            @include respond-above-ht($media_ht_480)
               height: 20px
 
             @include respond-above($media_768)
@@ -122,7 +122,7 @@
               display: inline-block
               overflow: hidden
 
-              @include respond-above-ht($media_ht_420)
+              @include respond-above-ht($media_ht_480)
                 height: 20px
                 font-size: 14px
                 line-height: 20px
@@ -157,9 +157,10 @@
             position: relative
             width: 100%
             height: 14px
+            line-height: 14px
             display: none
 
-            @include type-mono(14px, $regular)
+            @include type-mono
 
             &.callout
               text-transform: capitalize
