--- a/src/styles/slides/_featured-work.sass
+++ b/src/styles/slides/_featured-work.sass
@@ -7,12 +7,13 @@
   .picture-zone
     position: absolute
     top: 0px
-    left: 50%
+    left: 0px
     width: 100%
     height: 100%
     background-repeat: no-repeat
-    background-position: left bottom
-    background-size: contain
+    background-position: right bottom
+    background-size: 100% auto
+    background-blend-mode: multiply
     overflow: hidden
     opacity: 0
 
@@ -22,6 +23,13 @@
       opacity: 1
 
       transition: opacity $speed $ease_out
+
+    @media all and (max-aspect-ratio: 5/4)
+      background-position: 66% bottom
+      background-size: auto 90%
+      
+      &.show
+        opacity: 0.33
   
   // ---------------------------------------------
   // Title zone
