--- a/src/styles/slides/_slide.sass
+++ b/src/styles/slides/_slide.sass
@@ -19,7 +19,7 @@
 
   .title-zone
     position: absolute
-    top: 40px
+    top: 16px
     left: 20px
     right: 20px
     font-size: 0
@@ -36,6 +36,7 @@
       left: 60px
       right: 60px
 
+    @include respond-above($media_1024)
       @include respond-above-ht($media_ht_560)
         top: 50%
         transform: translate(0,-50%)
@@ -46,7 +47,6 @@
 
     .title-holder
       position: relative
-      height: 105px
       overflow: hidden
       display: inline-block
       cursor: pointer
@@ -54,10 +54,10 @@
       h2
         position: relative
         float: left
-        height: 30px
-        padding: 0 0 15px
-        font-size: 30px
-        line-height: 23px
+        height: 24px
+        padding: 0 0 12px
+        font-size: 22px
+        line-height: 24px
         font-weight: $bold
         display: inline-block
         overflow: hidden
@@ -66,7 +66,7 @@
         transform: translate3d(0,0px,0)
 
         &:last-child
-          margin: 15px 0 0
+          margin: 7px 0 0
           clear: both
 
         &:after
@@ -75,14 +75,14 @@
           bottom: 0px
           left: 0px
           width: 100%
-          height: 5px
+          height: 4px
           background-color: $black
 
       &.top h2
-        transform: translate3d(0,-40px,0)
+        transform: translate3d(0,-24px,0)
 
       &.bottom h2
-        transform: translate3d(0,40px,0)
+        transform: translate3d(0,24px,0)
 
       &.trans-in h2
         opacity: 1
@@ -96,15 +96,43 @@
         transition: transform $speed $ease_in, opacity $speed $ease_in
 
       &.trans-out.top h2
-        transform: translate3d(0,40px,0)
+        transform: translate3d(0,24px,0)
 
       &.trans-out.bottom h2
-        transform: translate3d(0,-40px,0)
+        transform: translate3d(0,-24px,0)
+
+      @include respond-above($media_480)
+        h2
+          height: 30px
+          padding: 0 0 15px
+          font-size: 30px
+          line-height: 23px
+
+          transform: translate3d(0,0px,0)
+
+          &:last-child
+            margin: 15px 0 0
+
+          &:after
+            height: 5px
+
+        &.top h2
+          transform: translate3d(0,-40px,0)
+
+        &.bottom h2
+          transform: translate3d(0,40px,0)
+
+        &.trans-in h2
+          transform: translate3d(0,0px,0)
+
+        &.trans-out.top h2
+          transform: translate3d(0,40px,0)
+
+        &.trans-out.bottom h2
+          transform: translate3d(0,-40px,0)
 
       @include respond-above($media_1024)
         @include respond-above-ht($media_ht_560)
-          height: 210px
-
           h2
             height: 60px
             padding: 0 0 30px
@@ -144,6 +172,41 @@
     bottom: 20px
     left: 20px
     right: 20px
+
+    h4
+      position: relative
+      height: 14px
+      padding: 0 0 0 25px
+      color: $black
+      font-family: $inconsolata
+      font-size: 12px
+      line-height: 14px
+
+      &:before
+        content: ''
+        position: absolute
+        top: 0px
+        left: 3px
+        width: 2px
+        height: 12px
+        margin: -1px 0 0
+        background-color: $black
+
+      &:after
+        content: ''
+        position: absolute
+        bottom: 0px
+        left: 0px
+        width: 0
+        height: 0
+        border-left: 4px solid transparent
+        border-right: 4px solid transparent
+        border-top: 6px solid $black
+
+      @include respond-above($media_768)
+        @include respond-above-ht($media_ht_480)
+          height: 14px
+          font-size: 14px
 
     ul
       float: left
