--- a/src/styles/slides/_featured-work.sass
+++ b/src/styles/slides/_featured-work.sass
@@ -13,7 +13,6 @@
     background-repeat: no-repeat
     background-position: right bottom
     background-size: 100% auto
-    background-blend-mode: multiply
     overflow: hidden
     opacity: 0
 
@@ -196,12 +195,13 @@
             left: 50%
             height: 40px
             padding: 0 20px
+            font-family: $inconsolata
+            font-size: 14px
             line-height: 40px
             text-transform: capitalize
             background-color: $black
             visibility: hidden
             opacity: 0
-            @include type-mono
 
             transform: translate3d(-50%,-2px,0)
 
