--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -48,18 +48,39 @@
     .page-nav-wrapper
       position: absolute
       top: 0px
-      right: 0px
-      width: 30px
+      left: 100%
+      width: 270px
       height: 100%
       background-color: rgba(0,0,0,0.06)
+      overflow: hidden
+
+      transform: translate3d(-30px,0,0)
+      transition: transform $speed_metal $evil_ease $speed_metal
+
+      &:before
+        content: ''
+        position: absolute
+        top: 0px
+        left: 30px
+        right: 0px
+        bottom: 0px
+        background-color: $black
+
+      &:hover
+        transform: translate3d(-270px,0,0)
+        transition: transform $speed_metal $evil_ease
 
       @include respond-above($media_480)
-        width: 40px
+        @include respond-above-ht($media_ht_480)
+          transform: translate3d(-40px,0,0)
+
+          &:before
+            left: 40px
 
       .page-nav
         position: absolute
         top: 50%
-        right: 0px
+        left: 0px
         width: 100%
 
         transform: translate(0%, -50%)
@@ -69,52 +90,189 @@
           height: 30px
 
           @include respond-above($media_480)
-            height: 40px
+            @include respond-above-ht($media_ht_480)
+              height: 40px
 
           a
             position: relative
             width: 100%
             height: 100%
-            font-size: 12px
-            line-height: 30px
-            font-weight: $bold
-            text-align: center
+            font-size: 0
+            line-height: 0
+            white-space: nowrap
+            overflow: hidden
             display: block
 
-            @include respond-above($media_480)
-              line-height: 40px
-
-            span:first-child
-              position: absolute
-              top: 0px
-              right: 0px
-              height: 100%
-              padding: 0 60px 0 20px
-              color: $black
-              background-color: $white
-              white-space: nowrap
-
-              transform: translate3d(100%,0,0)
-
-            span:last-child
+            span.black-bar
               position: absolute
               top: 0px
               left: 0px
               width: 100%
               height: 100%
+              background-color: $black
 
-          a:hover
-            @include respond-above($media_1180)
-              span:first-child
-                transform: translate3d(0%,0,0)
-                transition: transform $speed $evil_ease 100ms
+              transform: translate3d(30px,0,0)
+              transition: transform $speed_metal $evil_ease
 
-              span:last-child
-                background-color: $black
+            h4
+              position: absolute
+              top: 0px
+              left: 0px
+              width: 100%
+              height: 100%
+              color: $white
+              font-size: 12px
+              line-height: 30px
+              font-weight: $bold
+
+              transform: translate3d(0,0,0)
+
+              &:nth-of-type(1)
+                width: 30px
+                text-align: center
+
+              &:nth-of-type(2)
+                left: 40px
+                color: #999
+
+                transition: color $speed $ease_out
+
+            @include respond-above($media_480)
+              @include respond-above-ht($media_ht_480)
+                span.black-bar
+                  transform: translate3d(40px,0,0)
+
+                h4
+                  line-height: 40px
+
+                  &:nth-of-type(1)
+                    width: 40px
+
+                  &:nth-of-type(2)
+                    left: 60px
+
+          a:hover,
+          a.active
+            span.black-bar
+              transform: translate3d(0px,0,0)
+
+            h4:nth-of-type(2)
+              color: $white
 
           a.active
-            span:last-child
-              background-color: $black
+            cursor: default
+
+      #filter-zone
+        position: absolute
+        top: 0px
+        left: 30px
+        right: 0px
+        height: 30px
+        background-color: rgba(0,0,0,0)
+        overflow: hidden
+
+        transition: height 0ms linear $speed_metal, background-color $speed_metal $evil_ease
+
+        h4
+          position: absolute
+          top: 0px
+          left: 0px
+          width: 100%
+          height: 30px
+          background-color: #242424
+          cursor: default
+
+          transform: translate3d(0,0,0)
+
+          &:after
+            content: ''
+            position: absolute
+            top: 50%
+            right: 10px
+            width: 0
+            height: 0
+            margin: -3px 0 0
+            border-left: 5px solid transparent
+            border-right: 5px solid transparent
+            border-top: 6px solid $white
+
+          span
+            margin: 0 0 0 10px
+            font-family: $inconsolata
+            font-size: 12px
+            line-height: 30px
+
+        ul
+          position: absolute
+          top: 30px
+          left: 0px
+          width: 100%
+          height: 100%
+          overflow: hidden
+
+          transform: translate3d(0,-100%,0)
+          transition: transform $speed_metal $evil_ease
+
+          li.filter-item
+            position: relative
+            width: 100%
+            height: 30px
+            background-color: #2e2e2e
+            cursor: pointer
+
+            span
+              margin: 0 0 0 10px
+              color: #999
+              font-family: $inconsolata
+              font-size: 12px
+              line-height: 30px
+
+              transition: color $speed $ease_out
+
+            &:hover,
+            &.active
+              span
+                color: $white
+
+            &.active
+              cursor: default
+
+        @include respond-above($media_480)
+          @include respond-above-ht($media_ht_480)
+            left: 40px
+            height: 40px
+
+            h4
+              height: 40px
+
+              &:after
+                right: 20px
+
+              span
+                margin: 0 0 0 20px
+                font-size: 14px
+                line-height: 40px
+
+            ul
+              top: 40px
+
+              li.filter-item
+                height: 40px
+
+                span
+                  margin: 0 0 0 20px
+                  font-size: 14px
+                  line-height: 40px
+
+        &:hover
+          height: 100%
+          background-color: rgba(0,0,0,0.7)
+
+          transition: height 0ms linear, background-color $speed_metal
+
+          ul
+            transform: translate3d(0,0%,0)
+            transition: transform $speed_metal $evil_ease
 
 // -----------------------------------------------
 // Home styles
