--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -49,7 +49,7 @@
       position: absolute
       top: 0px
       left: 100%
-      width: 270px
+      width: 320px
       height: 100%
       background-color: rgba(0,0,0,0.06)
       overflow: hidden
@@ -79,8 +79,7 @@
           height: 30px
 
           @include respond-above($media_480)
-            @include respond-above-ht($media_ht_480)
-              height: 40px
+            height: 40px
 
           a
             position: relative
@@ -112,7 +111,6 @@
               color: $white
               font-size: 12px
               line-height: 30px
-              font-weight: $bold
 
               transform: translate3d(0,0,0)
 
@@ -127,18 +125,22 @@
                 transition: color $speed $ease_out
 
             @include respond-above($media_480)
+              span.black-bar
+                transform: translate3d(40px,0,0)
+
+              h4
+                line-height: 40px
+
+                &:nth-of-type(1)
+                  width: 40px
+
+                &:nth-of-type(2)
+                  left: 60px
+
+            @include respond-above($media_768)
               @include respond-above-ht($media_ht_480)
-                span.black-bar
-                  transform: translate3d(40px,0,0)
-
                 h4
-                  line-height: 40px
-
-                  &:nth-of-type(1)
-                    width: 40px
-
-                  &:nth-of-type(2)
-                    left: 60px
+                  font-size: 14px
 
           a:hover,
           a.active
@@ -152,7 +154,7 @@
             cursor: default
 
       &:hover
-        transform: translate3d(-270px,0,0)
+        transform: translate3d(-320px,0,0)
         transition: transform $speed_metal $evil_ease
 
         .page-nav
@@ -162,11 +164,10 @@
                 transition: transform $speed $evil_ease
 
       @include respond-above($media_480)
-        @include respond-above-ht($media_ht_480)
-          transform: translate3d(-40px,0,0)
+        transform: translate3d(-40px,0,0)
 
-          &:before
-            left: 40px
+        &:before
+          left: 40px
 
       #filter-zone
         position: absolute
@@ -244,29 +245,39 @@
               cursor: default
 
         @include respond-above($media_480)
-          @include respond-above-ht($media_ht_480)
-            left: 40px
+          left: 40px
+          height: 40px
+
+          h4
             height: 40px
 
-            h4
-              height: 40px
+            &:after
+              right: 20px
 
-              &:after
-                right: 20px
+            span
+              margin: 0 0 0 20px
+              line-height: 40px
+
+          ul
+            top: 40px
+
+            li.filter-item
+              height: 40px
 
               span
                 margin: 0 0 0 20px
                 line-height: 40px
 
+        @include respond-above($media_768)
+          @include respond-above-ht($media_ht_480)
+            h4
+              span
+                font-size: 14px
+
             ul
-              top: 40px
-
               li.filter-item
-                height: 40px
-
                 span
-                  margin: 0 0 0 20px
-                  line-height: 40px
+                  font-size: 14px
 
         &:hover
           height: 100%
