true vertical center title zones

--- a/src/styles/slides/_slide.sass
+++ b/src/styles/slides/_slide.sass
@@ -39,6 +39,8 @@
     @include respond-above($media_1024)
       @include respond-above-ht($media_ht_560)
         top: 50%
+        margin: 16px 0 0
+        
         transform: translate(0,-50%)
 
     @include respond-above($media_1180)
