adjust vertical centering of title zones

--- a/src/styles/slides/_about-process.sass
+++ b/src/styles/slides/_about-process.sass
@@ -23,8 +23,9 @@
   // Title zone
   // ---------------------------------------------
 
-  .title-zone
+  .title-zone.sub-title
     top: 12px
+    margin: 0
 
     transform: none
 
