adjust menu btn transition speed

--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -368,17 +368,17 @@
             margin: -6px 0 0 -8px
 
             transform: rotate(0deg)
-            transition: margin 100ms $ease_out, transform 100ms $ease_out
+            transition: margin $speed $evil_ease, transform $speed $evil_ease
 
           &:nth-child(2)
             opacity: 1
-            transition: opacity 100ms $ease_out
+            transition: opacity $speed $evil_ease
 
           &:nth-child(3)
             margin: 4px 0 0 -8px
 
             transform: rotate(0deg)
-            transition: margin 100ms $ease_out, transform 100ms $ease_out
+            transition: margin $speed $evil_ease, transform $speed $evil_ease
 
         &.close
           span
