wip: drag up or down to navigate through slides

--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -45,6 +45,9 @@
       height: 100%
       overflow: hidden
 
+      user-select: none
+      transform: translate3d(0,0px,0)
+
     .page-nav-wrapper
       position: absolute
       top: 0px
