title holder cursor states for grabbing vs pointer

--- a/src/styles/slides/_featured-work.sass
+++ b/src/styles/slides/_featured-work.sass
@@ -35,6 +35,9 @@
   // ---------------------------------------------
 
   .title-zone
+    .title-holder
+      cursor: pointer
+    
     .callouts
       position: relative
       width: 100%
