user select none

--- a/src/styles/_header.sass
+++ b/src/styles/_header.sass
@@ -6,6 +6,8 @@ header
   height: 50px
   overflow: hidden
 
+  user-select: none
+
   @include respond-above($media_768)
     @include respond-above-ht($media_ht_480)
       height: 76px
