--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -480,3 +480,145 @@
   canvas
     right: 0px
     left: auto
+
+
+// --------------------------------------------------------------------------
+// --------------------------------------------------------------------------
+//
+// DETAIL SLIDES
+// MOVE TO OWN STYLESHEET?
+//
+// --------------------------------------------------------------------------
+// --------------------------------------------------------------------------
+
+#detail-slides
+  position: absolute
+  top: 0px
+  left: 0px
+  width: 100%
+  height: 100%
+  background-color: $light_gray
+  overflow: hidden
+  display: none
+
+  .detail-slide
+    position: absolute
+    top: 0px
+    left: 0px
+    width: 100%
+    height: 100%
+    overflow: hidden
+    display: none
+
+    &.active
+      display: block
+
+    .bg
+      position: absolute
+      top: 0px
+      left: 0px
+      width: 100%
+      height: 100%
+      background-repeat: no-repeat
+      background-position: center center
+      background-size: cover
+      overflow: hidden
+
+    .content
+      position: absolute
+      top: 0px
+      left: 0px
+      width: 100%
+      height: 100%
+      overflow-x: hidden
+      overflow-y: scroll
+
+      -webkit-overflow-scrolling: touch
+
+      transform: translate3d(0,0,0)
+
+      section
+        position: relative
+        width: 100%
+        background-color: $light_gray
+
+        .inner
+          position: relative
+          padding: 80px 100px 0
+
+          h4
+            max-width: 460px
+            color: $black
+            @include type-mono
+
+          p
+            max-width: 460px
+            color: #838383
+            @include type-mono
+
+          .placeholder
+            position: relative
+            width: 100%
+            height: 0
+            margin: 80px 0 0
+            padding: 0 0 50%
+            background-color: #666
+
+            &:after
+              content: 'Placeholder Content'
+              position: absolute
+              top: 50%
+              left: 50%
+              @include type-mono
+
+              transform: translate(-50%,-50%)
+
+        &:first-child
+          height: 100%
+          background-color: transparent
+
+        &:last-child
+          .inner
+            padding-bottom: 80px
+
+        &.overview
+          height: auto
+
+          .overview-inner
+            position: relative
+            width: 100%
+            background-color: $white
+
+            .black-box
+              width: 100%
+              max-width: 460px
+              margin: 0 auto
+              padding: 100px
+              background-color: $black
+
+              transform: translate(0,-200px)
+
+              h4
+                @include type-mono
+
+              p
+                color: #aaa
+                @include type-mono
+
+              .lists
+                margin: 80px 0
+
+                ul
+                  float: left
+                  width: 50%
+
+                  li
+                    color: #aaa
+                    @include type-mono
+
+                    &:first-child
+                      color: $white
+
+              a
+                @include type-mono
+                display: inline-block
